<resources>
    <string name="app_name">RVC@UVC</string>
    <string name="title_activity_settings">Settings</string>
    <string name="parking_sensor_none_value">---</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_name_autostart">Autostart on boot</string>
    <string name="pref_desc_autostart">Autostart app on system boot</string>

    <string name="pref_name_fullscreen">Полноэкранный режим</string>
    <string-array name="pref_fullscreen_titles">
        <item>Отключить</item>
        <item>Скрыть строку уведомлений</item>
        <item>Скрыть строку уведомлений и навигационную панель</item>
    </string-array>
    <string-array name="pref_fullscreen_values" translatable="false">
        <item>disable</item>
        <item>hide_title_bar</item>
        <item>hide_navigation_bar</item>
    </string-array>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- General camera -->
    <string name="pref_header_camera">Камера</string>

    <string name="pref_name_camera_view_position">Выравнивание на экране</string>
    <string-array name="pref_camera_view_position_titles">
        <item>Слева</item>
        <item>По центру</item>
        <item>Справа</item>
    </string-array>
    <string-array name="pref_camera_view_position_values" translatable="false">
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>

    <string name="pref_name_usb_device_name">Адрес камеры</string>
    <string name="pref_title_usb_device_name">Выберите USB устройство</string>

    <string name="pref_name_camera_keep_aspect_ratio">Сохранять пропорции видео</string>
    <string name="pref_desc_camera_keep_aspect_ratio">Если включено, то изображение будет пропорционально масштабировано</string>

    <string name="pref_name_camera_mirror">Зеркальное отображение</string>
    <string name="pref_desc_camera_mirror">Отобразить по горизонтали "картику" с камеры</string>

    <string name="pref_name_camera_width">Ширина области камеры</string>
    <string name="pref_desc_camera_width">Укажите ширину области камеры, оставшаяся часть будет использована для отображения данных парковочных сенсоров</string>




    <!-- Parking Sensors settings -->
    <string name="pref_header_parkingsensors">Парковочные сенсоры</string>

    <string name="pref_name_ps_enable">Включить парковоные сенсоры</string>
    <string name="pref_desc_ps_enable">Отображать данные парковочных сенсоров</string>

    <string name="pref_name_front_sensors_count">Количество сенсоров впереди</string>
    <string name="pref_desc_front_sensors_count">Укажите количество парковочных сенсоров установленных на переднем бампере</string>


    <string name="pref_name_ps_front_indicator_position">Расположение числового индикатора передних сенсоров</string>
    <string-array name="pref_ps_front_indicator_position_titles">
        <item>Не отображать</item>
        <item>Слева</item>
        <item>Справа</item>
    </string-array>
    <string-array name="pref_ps_front_indicator_position_values" translatable="false">
        <item>disabled</item>
        <item>left</item>
        <item>right</item>
    </string-array>

    <string name="pref_name_rear_sensors_count">Количество сенсоров сзади</string>
    <string name="pref_desc_rear_sensors_count">Укажите количество парковочных сенсоров установленных на заднем бампере</string>

    <string name="pref_name_ps_rear_indicator_position">Расположение числового индикатора задних сенсоров</string>
    <string-array name="pref_ps_rear_indicator_position_titles">
        <item>Не отображать</item>
        <item>Слева</item>
        <item>Справа</item>
    </string-array>
    <string-array name="pref_ps_rear_indicator_position_values" translatable="false">
        <item>disabled</item>
        <item>left</item>
        <item>right</item>
    </string-array>

    <string name="pref_name_ps_indicators_margin">Отступ числовых индикаторов (в dp)</string>
    <string name="pref_default_ps_indicators_margin">10</string>

    <string name="pref_name_car_height">Размер (высота) автомобиля (в % от высоты экрана)</string>
    <string name="pref_desc_car_height"></string>

    <string name="pref_name_car_font_size">Размер шрифта числовых индикаторов (в sp)</string>
    <string name="pref_desc_car_font_size"></string>


    <string name="pref_name_ps_min">Минимальное определяемое расстояние сенсора</string>
    <string name="pref_default_ps_min">0</string>

    <string name="pref_name_ps_max">Максимальное определяемое расстояние сенсора</string>
    <string name="pref_default_ps_max">255</string>

    <string name="pref_name_ps_position">Расположение на экране</string>
    <string-array name="pref_ps_position_titles">
        <item>Слева</item>
        <item>По центру</item>
        <item>Справа</item>
    </string-array>
    <string-array name="pref_ps_position_values">
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>

    <string name="pref_name_units">Единицы измерения</string>
    <string name="pref_default_units">см</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
