<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_header_general">

        <SwitchPreference
            android:key="autostart"
            android:title="@string/pref_name_autostart"
            android:summary="@string/pref_desc_autostart"
            android:defaultValue="true" />

        <ListPreference
            android:key="fullscreen"
            android:title="@string/pref_name_fullscreen"
            android:defaultValue="2"
            android:entries="@array/pref_fullscreen_titles"
            android:entryValues="@array/pref_fullscreen_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <!--<SwitchPreference-->
            <!--android:key="app_autodetect"-->
            <!--android:title="@string/pref_title_app_autodetect"-->
            <!--android:defaultValue="true" />-->

        <!--<EditTextPreference-->
            <!--android:dependency="app_autodetect"-->
            <!--android:key="app_detect_delay"-->
            <!--android:title="@string/pref_title_app_detect_delay"-->
            <!--suffix="@string/pref_title_app_detect_delay_suffix"-->
            <!--min="50"-->
            <!--max="10000"-->
            <!--android:defaultValue="500"-->
            <!--android:inputType="number" />-->

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:key="example_text"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_parkingsensors">

        <SwitchPreference
            android:key="ps_enable"
            android:title="@string/pref_name_ps_enable"
            android:summary="@string/pref_desc_ps_enable"
            android:defaultValue="true" />

        <ListPreference
            android:key="ps_position"
            android:dependency="ps_enable"
            android:title="@string/pref_name_ps_position"
            android:defaultValue="left"
            android:entries="@array/pref_ps_position_titles"
            android:entryValues="@array/pref_ps_position_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="car_height"
            android:title="Размер автомобиля"
            android:summary=""
            android:defaultValue="30"
            sample:msbp_minValue="5"
            sample:msbp_maxValue="80"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="%"/>



    </PreferenceCategory>

</PreferenceScreen>
